--- a/nav/style.css
+++ b/nav/style.css
@@ -110,6 +110,43 @@ section{
 
 
 
+/******projects*****/
+#Projects{
+    background: rgb(107, 39, 39);
+}
+
+#Projects h1{
+    color: #b5b4b4;
+    display: flex;
+  justify-content: center;  /* Center horizontally */
+  align-items: center;      /* Center vertically */
+  
+}
+#Projects p{ 
+  display: flex;
+  justify-content: center;  /* Center horizontally */
+  align-items: center;      /* Center vertically */
+ 
+}
+
+
+.download-button {
+    background-color: #162a5d;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    border-radius: 20px;
+    display: inline-block;
+    margin-top: 10px;
+    align-self: center;
+}
+
+.download-button:hover {
+    background-color:#000022;
+}
+
+
+
 /* ===== skills =====*/
 #skills{
     background: linear-gradient(to right,#3108088c,#d3bdbd 100%  );
